--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/output.css">
+    <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oswald&display=swap" rel="stylesheet">
+    
     <title>Psychic Game</title>
 </head>
-<body>
+
+<body class="bg-teal-600">
+    <h1 class="text-5xl text-center text-white py-5">The Psychic Game</h1>
+
+    <div class="content container mx-auto px-10 py-20 block text-white">
+        <p class="text-lg">Guess what letter I'm thinking of! </p>
+        <span id="winScore">Wins: </p>
+        <span id="loseScore">Losses: </p>
+        <span id="guesses">Your Guesses so far: </p>
+    </div>
+
     <script src="assets/javascript/game.js"></script>
 </body>
+
 </html>
