--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="flex">
           <div class="flex-1 h-auto text-3xl my-5">
               Guess what letter I'm thinking of!
+              <!-- <img src="assets/images/heartsun.svg"/> -->
           </div>
         </div>
 </div>
@@ -24,17 +25,17 @@
       <div class="flex -m-auto">
         <div class="w-1/3 border-r-4">
           <div class="h-auto p-2">
-              Guesses Left:
+            Number of guesses remaining: <div id="guessesLeft"></div>
           </div>
         </div>
         <div class="w-1/3 border-r-4">
-          <div class="h-auto p-2">
-              Wins:
-          </div>
+          <div class="h-auto p-2"> 
+            Win: <div id="win"></div>
+          </div> 
         </div>
         <div class="w-1/3">
-          <div class="h-auto p-2">
-              Losses:
+          <div class="h-auto p-2"> 
+            Loss: <div id="loss"></div>
           </div>
         </div>
       </div>
@@ -43,8 +44,8 @@
 
 <div class="text-center bg-blue-500 mx-20">
         <div class="flex">
-            <div class="flex-1 h-auto text-3xl">
-              Your guesses so far:
+            <div class="flex-1 h-auto text-3xl" id="guesses">
+              Guesses so far: <div id="guesses"></div>
             </div>
           </div> 
     </div>
@@ -54,3 +55,25 @@
 
 </body>
 </html>
+
+<!-- messing with tailwind for fun
+<nav class="flex items-center justify-between flex-wrap bg-blue-400 p-6">
+  <div class="flex items-center flex-shrink-0 text-white mr-6">
+
+    <span class="font-semibold text-xl tracking-tight">Psychic Game</span>
+  </div>
+
+</nav>
+
+<body>
+
+  <div class="inline-flex w-screen bg-blue-200 ">
+    <div class="flex-1 text-gray-700 text-center bg-blue-400 px-2 py-2 m-2">1</div>
+    <div class="flex-1 text-gray-700 text-center bg-blue-400 px-2 py-2 m-2">2</div>
+    <div class="flex-1 text-gray-700 text-center bg-blue-400 px-2 py-2 m-2">3</div>
+  </div>
+
+<script src="assets/javascript/game.js"></script>
+
+</body>
+</html> -->
