--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond|Oswald&display=swap" rel="stylesheet">
     
     <title>Psychic Game</title>
+
 </head>
 
 <body class="bg-blue-500 text-white">
@@ -44,7 +45,7 @@
 
 <div class="text-center bg-blue-500 mx-20">
         <div class="flex">
-            <div class="flex-1 h-auto text-3xl" id="guesses">
+            <div class="flex-1 h-auto text-3xl">
               Guesses so far: <div id="guesses"></div>
             </div>
           </div> 
@@ -55,25 +56,3 @@
 
 </body>
 </html>
-
-<!-- messing with tailwind for fun
-<nav class="flex items-center justify-between flex-wrap bg-blue-400 p-6">
-  <div class="flex items-center flex-shrink-0 text-white mr-6">
-
-    <span class="font-semibold text-xl tracking-tight">Psychic Game</span>
-  </div>
-
-</nav>
-
-<body>
-
-  <div class="inline-flex w-screen bg-blue-200 ">
-    <div class="flex-1 text-gray-700 text-center bg-blue-400 px-2 py-2 m-2">1</div>
-    <div class="flex-1 text-gray-700 text-center bg-blue-400 px-2 py-2 m-2">2</div>
-    <div class="flex-1 text-gray-700 text-center bg-blue-400 px-2 py-2 m-2">3</div>
-  </div>
-
-<script src="assets/javascript/game.js"></script>
-
-</body>
-</html> -->
